--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
             "email": "tiffany89031176@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "Demo\\": "./src/Demo"
+        }
+    }
 }
