--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,13 @@
             "email": "tiffany89031176@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "monolog/monolog": "^2.1",
+        "nesbot/carbon": "^2.41"
+    },
     "autoload": {
         "psr-4": {
             "Demo\\": "./src/Demo"
-        },
-        "classmap": [
-            "./my_library",
-            "./other_library"
-        ],
-        "files": [
-            "src/Illuminate/Foundation/helpers.php",
-            "src/Illuminate/Support/helpers.php"
-        ]
+        }
     }
 }
